--- a/day6/day6.cabal
+++ b/day6/day6.cabal
@@ -1,5 +1,5 @@
 cabal-version:   3.0
-name:            example
+name:            day6
 version:         0.1.0.0
 license:         NONE
 author:          Joe
@@ -9,7 +9,7 @@ build-type:      Simple
 common warnings
     ghc-options: -Wall
 
-executable example
+executable day6
     import:           warnings
     main-is:          Main.hs
     build-depends:
